# MiniCRM

./: .env  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  INSTALLATION.md  LICENSE  README.md  branch2.md  compose.yaml  create_customer_service_data.py  create_dummy_data.py  create_enhanced_dummy_data.py  create_mysql_dummy_data.py  db.sqlite3  django_shell_commands.py  docker-compose.yml  dummy_data.sql  main.py  package-lock.json  pyproject.toml  requirements.txt  simple_dummy_data.py  uwsgi.ini
.claude/: settings.local.json
backend/: Dockerfile  manage.py  test_knowledge_base.py  test_rag.py
backend/chroma_db/: chroma.sqlite3
backend/crm_backend/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
backend/customer_service/: admin.py  models.py  serializers.py  urls.py  views.py
backend/customer_service/migrations/: 0001_initial.py
backend/customers/: admin.py  models.py  serializers.py  urls.py  views.py
backend/customers/migrations/: 0001_initial.py  0002_customer_age_customer_gender_and_more.py
backend/line_bot/: urls.py  views.py
backend/orders/: models.py  serializers.py  urls.py  views.py
backend/orders/migrations/: 0001_initial.py
backend/products/: admin.py  models.py  serializers.py  urls.py  views.py
backend/products/migrations/: 0001_initial.py
backend/rag_system/: apps.py  knowledge_base.py  llm_service.py  query_engine.py
backend/reports/: urls.py  views.py
backend/test_chroma_db/: chroma.sqlite3
backend/transactions/: models.py  serializers.py  urls.py  views.py
backend/transactions/migrations/: 0001_initial.py
crm_backend/: asgi.py  settings.py  urls.py  wsgi.py
crm_venv/: pyvenv.cfg
customers/: admin.py  apps.py  models.py  serializers.py  views.py
customers/management/commands/: create_sample_data.py
frontend/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  test_customers.csv
frontend/src/: App.tsx  index.css
frontend/src/components/: CustomerAnalytics.tsx  CustomerDetail.tsx  CustomerForm.tsx  CustomerImport.tsx  CustomerList.tsx  Dashboard.tsx  FAQList.tsx  KnowledgeBaseDetail.tsx  KnowledgeBaseList.tsx  Layout.tsx  Login.tsx  MobileHeader.tsx  OrderDetail.tsx  OrderForm.tsx  OrderList.tsx  ProductDetail.tsx  ProductForm.tsx  ProductList.tsx  ProtectedRoute.tsx  ServiceTicketDetail.tsx  ServiceTicketForm.tsx  ServiceTicketList.tsx  Sidebar.tsx  TransactionDetail.tsx  TransactionForm.tsx  TransactionList.tsx
frontend/src/components/customer_analytics/: AgeAnalysisChart.tsx  CustomerSegmentMatrix.tsx  CustomerSourceChart.tsx  CustomerTierChart.tsx  GenderAnalysisChart.tsx  ProductPreferenceChart.tsx  SeasonalAnalysisChart.tsx  index.ts
frontend/src/components/customer_analytics/pages/: CustomerBehavior.tsx  CustomerDemographics.tsx  CustomerOverview.tsx  CustomerSegmentation.tsx  CustomerValueAnalytics.tsx  index.ts
frontend/src/components/dashboard/: CustomerGrowthChart.tsx  DashboardFilters.tsx  KPICards.tsx  OrderGrowthChart.tsx  PaymentMethodChart.tsx  RevenueTrendChart.tsx  StatsCards.tsx
frontend/src/services/: api.ts  auth.ts
frontend/src/types/: common.ts  customer-service.ts  customer.ts  customerImport.ts  error.ts  index.ts  order.ts  product.ts  transaction.ts
memberships/: apps.py  models.py  serializers.py  views.py
orders/: models.py  serializers.py
orders/migrations/: 0001_initial.py
reports/: urls.py
scripts/: create_customer_service_data.py  create_enhanced_dummy_data.py
transactions/: apps.py  models.py  serializers.py  urls.py  views.py
transactions/migrations/: 0001_initial.py
