[project]
name = "minicrm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aenum==3.1.16",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.14",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asgiref==3.8.1",
    "async-timeout==5.0.1",
    "attrs==25.3.0",
    "backoff==2.2.1",
    "bcrypt==4.3.0",
    "build==1.2.2.post1",
    "cachetools==5.5.2",
    "certifi==2025.7.14",
    "charset-normalizer==3.4.2",
    "chroma-hnswlib==0.7.3",
    "chromadb==0.4.22",
    "click==8.2.1",
    "coloredlogs==15.0.1",
    "Deprecated==1.2.18",
    "distro==1.9.0",
    "Django==4.2.7",
    "django-cors-headers==4.3.1",
    "django-filter==23.3",
    "django-stubs>=5.2.2",
    "djangorestframework==3.14.0",
    "djangorestframework-stubs>=3.16.2",
    "djangorestframework_simplejwt==5.5.0",
    "durationpy==0.10",
    "exceptiongroup==1.3.0",
    "fastapi==0.116.1",
    "filelock==3.18.0",
    "flatbuffers==25.2.10",
    "frozenlist==1.7.0",
    "fsspec==2025.7.0",
    "future==1.0.0",
    "google-auth==2.40.3",
    "googleapis-common-protos==1.70.0",
    "grpcio==1.74.0",
    "h11==0.16.0",
    "hf-xet==1.1.5",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.25.2",
    "huggingface-hub==0.34.1",
    "humanfriendly==10.0",
    "idna==3.10",
    "importlib_metadata==8.7.0",
    "importlib_resources==6.5.2",
    "Jinja2==3.1.6",
    "joblib==1.5.1",
    "kubernetes==33.1.0",
    "line-bot-sdk==3.17.1",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "mdurl==0.1.2",
    "mmh3==5.1.0",
    "mpmath==1.3.0",
    "multidict==6.6.3",
    "networkx==3.4.2",
    "nltk==3.9.1",
    "numpy>=1.26.0,<2.0.0",
    "oauthlib==3.3.1",
    "ollama==0.1.7",
    "onnxruntime==1.22.1",
    "opentelemetry-api==1.35.0",
    "opentelemetry-exporter-otlp-proto-common==1.35.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.35.0",
    "opentelemetry-instrumentation==0.56b0",
    "opentelemetry-instrumentation-asgi==0.56b0",
    "opentelemetry-instrumentation-fastapi==0.56b0",
    "opentelemetry-proto==1.35.0",
    "opentelemetry-sdk==1.35.0",
    "opentelemetry-semantic-conventions==0.56b0",
    "opentelemetry-util-http==0.56b0",
    "overrides==7.7.0",
    "packaging==25.0",
    "Pillow>=10.4.0",
    "posthog==6.3.1",
    "propcache==0.3.2",
    "protobuf==6.31.1",
    "psycopg2-binary==2.9.10",
    "pulsar-client==3.8.0",
    "pyasn1==0.6.1",
    "pyasn1_modules==0.4.2",
    "pydantic==2.11.7",
    "pydantic_core==2.33.2",
    "Pygments==2.19.2",
    "PyJWT==2.9.0",
    "PyPika==0.48.9",
    "pyproject_hooks==1.2.0",
    "python-dateutil==2.9.0.post0",
    "python-decouple==3.8",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "PyYAML==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.4",
    "requests-oauthlib==2.0.0",
    "rich==14.1.0",
    "rsa==4.9.1",
    "safetensors==0.5.3",
    "scikit-learn>=1.4.0",
    "scipy==1.15.3",
    "sentence-transformers==2.7.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlparse==0.5.3",
    "starlette==0.47.2",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "threadpoolctl==3.6.0",
    "tokenizers==0.21.2",
    "tomli==2.2.1",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "tqdm==4.67.1",
    "transformers==4.54.0",
    "typer==0.16.0",
    "typing-inspection==0.4.1",
    "typing_extensions==4.14.0",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "uvloop==0.21.0",
    "uWSGI==2.0.30",
    "watchfiles==1.1.0",
    "websocket-client==1.8.0",
    "websockets==15.0.1",
    "wrapt==1.17.2",
    "yarl==1.20.1",
    "zipp==3.23.0",
]


## ruff
# <https://docs.astral.sh/ruff/settings/>
[tool.ruff]
required-version = ">=0.12.1"
target-version = "py313"
output-format = "concise"
show-fixes = true
line-length = 88

[tool.ruff.lint]
preview = true
select = ["ALL"]
exclude = ["playground/*.py"]

ignore = [
    ### Intentionally disabled
    "E501",   # line-too-long (format 會自動處理)
    "COM819", # prohibited-trailing-commas (與 ruff format 同時使用時候，執行順序將影響結果)
    "COM812", # missing-trailing-comma (會與 ruff format 衝突)

    "S101",   # assert  (不允許使用 assert)
    "RUF001", # ambiguous-unicode-character-string (不要使用不明確的 Unicode 字元)
    "RUF002", # ambiguous-unicode-character-docstring (不要使用不明確的 Unicode 字元)
    "RUF003", # ambiguous-unicode-character-comment (不要使用不明確的 Unicode 字元)
    "D415",   # ends-in-punctuation (註釋結尾應該有標點符號)
    "TD001",  # invalid-todo-tag (禁止使用 TODO 以外的 tag)
    "FIX001", # line-contains-fixme (註釋包含 FIXME)
    "FIX002", # flake8-fixme (註釋包含 TODO)

    "B008",   # unction-call-in-default-argument (不要在默認參數中調用函數)
    "FBT",    # flake8-boolean-trap (不要使用 True/False 作為函數的位置參數)
    "SIM117", # multiple-with-statements (不要使用嵌套 with)
    "EM",     # flake8-errmsg (錯誤訊息字串要先分配給變數)
    "TRY003", # raise-vanilla-args (自定義例外包含額外的長訊息)
    "TRY400", # error-instead-of-exception (logging 應該用 exception 取代 error)

    "D",

    ### preview
    "DOC",    # pydoclint (docstring 需要完整寫出 return / yield / raise)
    "T201",   # print (允許使用 print)
    "S",
    "CPY001", # missing-copyright-notice (缺少版權聲明)
]

[tool.ruff.lint.per-file-ignores]
"src/x_utils/*.py" = [
    "T201", # print (允許使用 print)
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-type-checking]
exempt-modules = [
    "typing",
    "typing_extensions",
    "langchain_core.runnables.RunnableConfig",
]

[tool.ruff.lint.pylint]
max-returns = 6     # default is 6
max-branches = 12   # default is 12
max-args = 6        # default is 5
max-statements = 50 # default is 50

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = false # 預設就是 false，當你想要消除尾隨逗號時候可以暫時開啟

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "decouple.*",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.12",
]
